--- a/index.html
+++ b/index.html
@@ -15,12 +15,24 @@
 </head>
 
 <body>
-<nav></nav>
-<main></main>
-<footer></footer>
+
+    <main>
+        <section>
+<div>
+    <h1>Elije cual sera tu arma vencedora</h1>
+</div>
+            <div class="buttons">
+                <button id="piedra">Piedra</button>
+                <button id="papel">Papel</button>
+                <button id="tijera">Tijera</button>
+              </div>
+        </section>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-<script src="js/app.js"></script>
+
 </html>
