Se realizo el maquetado

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 <body>
 
     <main>
-        <section>
-<div>
-    <h1>Elije cual sera tu arma vencedora</h1>
-</div>
+        <section class="container">
+            <div>
+                <h1>Elije cual sera tu arma vencedora</h1>
+            </div>
             <div class="buttons">
-                <button id="piedra">Piedra</button>
-                <button id="papel">Papel</button>
-                <button id="tijera">Tijera</button>
-              </div>
+                <button id="piedra" class="btn btn-light btn-lg boton">Piedra</button>
+                <button id="papel" class="btn btn-light btn-lg boton">Papel</button>
+                <button id="tijera" class="btn btn-light btn-lg boton">Tijera</button>
+            </div>
         </section>
     </main>
 
